# treasure_island

./: .gitignore  CMakeLists.txt  Makefile  elements_default.csv  elementsutils.c  elementsutils.h  gameutils.c  gameutils.h  island_default.csv  island_example.csv  main.c  maputils.c  maputils.h  maputlis.h  terminalutils.c  terminalutils.h
elements/: elements_default.csv
islands/: island_default.csv  island_two_treasures_variant.csv
